--- a/Final Report.tex
+++ b/Final Report.tex
@@ -1,14 +1,13 @@
-\documentclass{article} \usepackage{graphicx} 
+\documentclass{article} 
+\usepackage{graphicx} 
 \usepackage{amsmath}
 \usepackage{color,soul}
 \usepackage{lastpage}
 \usepackage{enumitem}
 
 \begin{document}
-	
-	\title{Final Report
-    \\ Group Project 7CCSMGPR} 	
-    \author{King's Traffic Control}
+	\title{Final Report\\ Group Project 7CCSMGPR} 	
+    	\author{King's Traffic Control}
 	\maketitle
 	
 	\section{Introduction}
@@ -53,10 +52,10 @@
 			 			 
 			 \end{itemize}
 			 
-			 \subsection{Design}
-			 We decided to use Scrum methodology for our implementing our project. Scrum is a management framework for incremental product development using one or more cross-functional, self-organising teams. 
-			 We divided ourselves into three teams of two members each. Each team was responsible for for developing a different part of the system. We helped each other as and when required.
-			  We started by just displaying a single road with a moving car on the road. then we implemented the traffic lights and got the car to respond to the traffic lights. These were the basics we started with and built our system on top of this. We made modifications to our system as we progressed. 	 
+		\subsection{Design}
+		 We decided to use Scrum methodology for our implementing our project. Scrum is a management framework for incremental product development using one or more cross-functional, self-organising teams. 
+		 We divided ourselves into three teams of two members each. Each team was responsible for for developing a different part of the system. We helped each other as and when required.
+		  We started by just displaying a single road with a moving car on the road. then we implemented the traffic lights and got the car to respond to the traffic lights. These were the basics we started with and built our system on top of this. We made modifications to our system as we progressed. 	 
 		 \subsection{Meeting the Project Objectives} 
 		 	Figure 1: GANTT Chart
 	\section{Implementation}
@@ -92,22 +91,20 @@
 	\section{Evaluation}
 	This section of the report covers the evaluation of our group project.  With what went well and why, and what didn't go well and the solutions to cover come it.
 	
-			\subsection{What didn't go well. How we overcome difficulties. how did your team work together? what changes were the result of improved thinking }
+		\subsection{What didn't go well. How we overcome difficulties. how did your team work together? what changes were the result of improved thinking }
 			
 		Initially, the group worked in one branch, the working branch, which was merged to the master branch at the end of each week. This was later found to be fatal as it was very prone to conflicts.  Instead, each group member created their own branch which created a pull request to the main branch each time they want to commit a code to the main source code. This was very helpful as other members can analyse and view individual pull request and comment on the quality of the code.  Conflicts in this case was often easy to resolve.\\ 
 		\\The major issue encountered in the project was in regards to the integration of the code with other group members. Once the Scrum commences each Friday fortnight, each member works on their own task.  Whilst a meeting was held each week, the communication level was found lacking as faults in linking the programme together were often identified nearing the end of the sprint.\\
 \\Upon encountering this problem the first sprint, our group remodelled our working patterns to encourage all of the team members to constantly work as a whole.  An eight-hour Hackaton was arranged for Fridays of each week.  This strategy was found to be very effective; coding was done at a higher phase and end task of each Hackaton session was met.  Due to its success, our group opted to hold two sets of compulsory Hackaton sessions each week, Wednesday and Friday respectively.  Hackatons were very helpful as it kept everyone informed of each individual's progress. Any questions and issues were quickly resolved and thus preventing a conflict with our code occurring.\\
 \\Whilst the Wednesday Hackaton is designed to keep the code integrated with each other and to insure that each sprint tasks is met, the Friday Hackatons were implemented to combine each group's sprint together. Both Hackatons acted as our informal meeting periods whereby any issues can be discussed and progress of our sprints can be evaluated.
-
 		\subsection{what changes were forced upon you? }
-			Unfortunately, now closing in at the end of the project, it has become clear that our lack of time management was a major issue we should have identified and resolved early in the project's life time. There were some instances where the sprint task were not met, which in turn pushed back the whole project. This was often caused by  unforeseen problems arising in the code. What the group lack overall is a grace period (an allotted time) in each sprint which allows such occurrences to be resolved. Because of this, some optional tasks we planned to execute were not included. Such features is the random map generation option.  We have nevertheless, methods that can be implement a random map if a button is clicked. \\
-			
-			The decision of how the group was split was not ideal. We should have split the group such that more experienced members were grouped with the less experienced members.  This would mean that simple  coding would have been completed sooner and thus, more members would have been made available to help with the other tasks
+		Unfortunately, now closing in at the end of the project, it has become clear that our lack of time management was a major issue we should have identified and resolved early in the project's life time. There were some instances where the sprint task were not met, which in turn pushed back the whole project. This was often caused by  unforeseen problems arising in the code. What the group lack overall is a grace period (an allotted time) in each sprint which allows such occurrences to be resolved. Because of this, some optional tasks we planned to execute were not included. Such features is the random map generation option.  We have nevertheless, methods that can be implement a random map if a button is clicked. \\
+		The decision of how the group was split was not ideal. We should have split the group such that more experienced members were grouped with the less experienced members.  This would mean that simple  coding would have been completed sooner and thus, more members would have been made available to help with the other tasks
 			
 		\subsection{What went well.  How did you do relative to your plan?}
 		The meeting 	
 		
-		\section{Relevant further work}  
+	\section{Relevant further work}  
 			Map configuration (from static to dynamic) and changing of lanes. Pedestrian crossing
 		
 	\section{Peer Assessment}
