--- a/Final Report.tex
+++ b/Final Report.tex
@@ -9,7 +9,8 @@
 	\title{Final Report\\ Group Project 7CCSMGPR} 	
     \author{King's Traffic Control TEAM}
 	\maketitle
-	\begin{abstract}
+	\begin{Abstract}
+		Here we display a simple animated traffic management system with a road network and different types of vehicles following traffic policies. 
 		This report documents the process of which a Traffic Simulation was developed over the course of one term.
 	\end{abstract}
 	\clearpage
@@ -131,8 +132,14 @@
 			The decision of how the group was split was not ideal. We should have split the group such that more experienced members were grouped with the less experienced members.  This would mean that simple  coding would have been completed sooner and thus, more members would have been made available to help with the other tasks
 		\subsection{What went well.  How did you do relative to your plan?}
 		The meeting 	
+		learn to work as a team
+		learn to use github -  can now solve any issues and conflict
+		adapting from abstract ideas
+		able to adapt to problems - need of more flexitime 
+		everyone made sacrifices 
+		
 	\section{Relevant further work}  
-			Map configuration (from static to dynamic) and changing of lanes. Pedestrian crossing
+			Map configuration (from static to dynamic) and changing of lanes. Pedestrian crossing.
 	\section{Peer Assessment}
 		As a group, we have surmised at the beginning of the project that the project will be split into three groups.  Marks have been distributed equally between the three groups. In cases where a group has failed to complete their task, the marks allocated to them will be deducted and is given to whichever the team that took up the task for them.
 		\begin{table}[h]
@@ -164,5 +171,4 @@
 %Attach your git log to the PDF in a suitable format (e.g. output from gitlog2latex.sh or latex-git-log). Include author, date, and 1 line commit message at a minimum.
 %Attach your source code to the end of the PDF using a2ps.
 %Max 12000 words / 35 pages (whichever is less).
-
 
